# structure-search

./: .gitignore  CLAUDE.md  DETAILS.md  README.md  RUNS.md  pyproject.toml
configs/: accelerate_config.yaml  deepspeed_zero3.json
plans/: kanzi.md
scripts/: train.sh
src/structure_search/: __init__.py  dataset.py  evaluate.py  foldseek_db.py  prostt5_baseline.py  train.py  train_kanzi.py
src/tokenfold/: dataset.py  kanzi_tokenizer.py  prostt5_baseline.py  train.py  train_kanzi.py
