[project]
name = "structure-search"
version = "0.1.0"
description = "Protein structure search and prediction using LLMs"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "datasets>=2.14.0",
    "accelerate>=0.27.0",
    "deepspeed>=0.12.0",
    "peft>=0.7.0",
    "bitsandbytes>=0.41.0",
    "wandb>=0.16.0",
    "tqdm>=4.65.0",
    "numpy>=1.24.0",
    "sentencepiece>=0.1.99",
    "protobuf>=3.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
flash = [
    "flash-attn>=2.0.0",
]

[project.scripts]
train-structure = "structure_search.train:main"
evaluate-structure = "structure_search.evaluate:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
